feat: add currency exchange package
